# Progetto-AMSC-NBody

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  Progetto AMSC NBody.sln  README.md  comments.txt
.github/workflows/: msbuild.yml
Progetto AMSC NBody/: CMakeLists.txt  Constants.h  Controls.cpp  Controls.h  ForceMatrix.cpp  ForceMatrix.h  Globals.h  OpenGLFunctions.cpp  OpenGLFunctions.h  Particle.cpp  Particle.h  ParticleCluster.cpp  ParticleCluster.h  Profiling.cpp  Profiling.h  Progetto AMSC NBody.vcxproj  Progetto AMSC NBody.vcxproj.filters  Types.h  Types.hpp  Utils.h  Vector.cpp  Vector.h  Visualisation.cpp  Visualisation.h  fragmentShader.fragmentshader  json_parser.hpp  main.cpp  main_old  main_old.cpp  particles.pt  particles_output.pt  settings.json  shader.cpp  shader.h  simulation_functions.h  test_json  test_json.cpp  vertexShader.vertexshader
Resources/: settings.json  vertexShader.vertexshader
doc/: settings.json
